--- a/senseifront/src/styles/Chat.css
+++ b/senseifront/src/styles/Chat.css
@@ -9,8 +9,7 @@
     display: flex;
     flex-direction: column;
     text-align: left;
-    margin-right: 1rem;
-    width: min(55rem, calc(100vw - 21rem));
+    width: min(55rem, calc(100vw - 17rem));
 }
 
 .collapsed .chat-window {
@@ -141,37 +140,18 @@
     width: 100%;
 }
 
-.small-spinner div {
-    background: linear-gradient(90deg, #00a0ff, #00000000);
-    border-radius: 50%;
-    width: 100px;
-    height: 100px;
-    animation: spin 0.5s linear infinite;
-}
-
-.small-spinner div div {
-    background: var(--bg2);
-    border-radius: 50%;
-    width: 75%;
-    height: 75%;
-    position: relative;
-    top: 12.5%;
-    left: 12.5%;
-}
-
 .chat-form {
     box-sizing: border-box;
     position: fixed;
     bottom: 0;
     display: flex;
     align-items: center;
-    width: min(55rem, calc(100vw - 21rem));
+    width: min(55rem, calc(100vw - 17rem));
     background: var(--bg4);
     padding: 0 0.5rem;
     margin-bottom: 0.5rem;
     border-radius: 0.75rem;
     border: 1px solid transparent;
-    transition: 0.3s;
     border: 1px solid #00a0ffa0;
 }
 
@@ -257,7 +237,7 @@
     flex-direction: row;
     justify-content: center;
     width: 100%;
-    margin-left: 19rem;
+    margin-left: 15rem;
     transition: margin-left 0.3s;
 }
 
